fixes footer on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,9 @@
 body {
-  font-family: 'Source Code Pro', monospace;
+    font-family: 'Source Code Pro', monospace;
+}
+
+/* viewport mobile fix https://stackoverflow.com/a/37113430/1443726 */
+.vh-100-fixed {
+    height: 100vh;
+    height: -webkit-fill-available;
 }
